# StratGame

./: CMakeLists.txt  README.md  circle.cpp  main.cpp  main.cpp_old
img/: menu.xcf  sprites.xcf
img/old/: grass.xcf  grasshd.xcf  rain.xcf  tree.xcf  water.xcf
include/: actor.h  board.h  daycycle.h  gamemenu.h  inventory.h  item.h  mapgen.h  player.h  spritesheet.h  tile.h  tt.h  utils.h  weather.h
maps/: map0.txt  map1.txt
src/: actor.cpp  board.cpp  daycycle.cpp  gamemenu.cpp  inventory.cpp  item.cpp  mapgen  mapgen.cpp  player.cpp  spritesheet.cpp  tile.cpp  tt.cpp  utils.cpp  weather.cpp
